Updated site to account for changed domain.

--- a/about/license/index.html
+++ b/about/license/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <meta name="author" content="Christopher M. Steffen">
-    <link rel="canonical" href="http://scriptsharks.github.io/about/license/">
+    <link rel="canonical" href="https://www.scriptsharks.com/about/license/">
     <link rel="shortcut icon" href="../../img/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <title>License - ScriptSharks</title>
