--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Exploring the world of dangerous code.">
     <meta name="author" content="Christopher M. Steffen">
-    <link rel="canonical" href="http://scriptsharks.github.io/">
+    <link rel="canonical" href="https://www.scriptsharks.com/">
     <link rel="shortcut icon" href="./img/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <title>ScriptSharks</title>
@@ -210,5 +210,5 @@ Edit on GitHub</a>
 </html>
 <!--
 MkDocs version : 1.3.0
-Build Date UTC : 2022-04-30 20:42:00.962542+00:00
+Build Date UTC : 2022-04-30 21:21:08.769321+00:00
 -->
