Changed HTTP to HTTPS wherever possible.

--- a/about/changelog/index.html
+++ b/about/changelog/index.html
@@ -131,7 +131,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <p>
         <a href="https://github.com/scriptsharks/scriptsharks.source/edit/master/docs/about/changelog.md"><i class="fa fa-github"></i>
 Edit on GitHub</a>
-      </p><p>Copyright &copy; 2022 Christopher M. Steffen.<br>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
+      </p><p>Copyright &copy; 2022 Christopher M. Steffen.<br>This work is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
   <p>Documentation built with <a href="http://www.mkdocs.org/">MkDocs</a> using <a href="https://github.com/scriptsharks/scriptsharks.source">Windmill Dark</a> theme by Christopher M. Steffen (noraj).</p>
 </footer>
 
