--- a/about/license/index.html
+++ b/about/license/index.html
@@ -70,7 +70,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
     
 
     <p><img alt="Creative Commons" src="https://creativecommons.org/images/deed/svg/cc_white.svg" /> <img alt="Attribution" src="https://creativecommons.org/images/deed/svg/attribution_icon_white.svg" /> <img alt="ShareAlike" src="https://creativecommons.org/images/deed/svg/sa_white.svg" /></p>
-<p>This work is licensed under a <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. The author has granted others the freedom to share and adapt this work as long as they respect the terms of the aforementioned license, as detailed in the <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">official text of the license</a>.</p>
+<p>This work is licensed under a <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. The author has granted others the freedom to share and adapt this work as long as they respect the terms of the aforementioned license, as detailed in the <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">official text of the license</a>.</p>
 
   <br>
     
@@ -99,7 +99,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <p>
         <a href="https://github.com/scriptsharks/scriptsharks.source/edit/master/docs/about/license.md"><i class="fa fa-github"></i>
 Edit on GitHub</a>
-      </p><p>Copyright &copy; 2022 Christopher M. Steffen.<br>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
+      </p><p>Copyright &copy; 2022 Christopher M. Steffen.<br>This work is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
   <p>Documentation built with <a href="http://www.mkdocs.org/">MkDocs</a> using <a href="https://github.com/scriptsharks/scriptsharks.source">Windmill Dark</a> theme by Christopher M. Steffen (noraj).</p>
 </footer>
 
