--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <p>
         <a href="https://github.com/scriptsharks/scriptsharks.source/edit/master/docs/index.md"><i class="fa fa-github"></i>
 Edit on GitHub</a>
-      </p><p>Copyright &copy; 2022 Christopher M. Steffen.<br>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
+      </p><p>Copyright &copy; 2022 Christopher M. Steffen.<br>This work is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
   <p>Documentation built with <a href="http://www.mkdocs.org/">MkDocs</a> using <a href="https://github.com/scriptsharks/scriptsharks.source">Windmill Dark</a> theme by Christopher M. Steffen (noraj).</p>
 </footer>
 
@@ -210,5 +210,5 @@ Edit on GitHub</a>
 </html>
 <!--
 MkDocs version : 1.3.0
-Build Date UTC : 2022-04-30 21:21:08.769321+00:00
+Build Date UTC : 2022-04-30 21:31:09.700289+00:00
 -->
