--- a/0xFF About/00 Changelog/index.html
+++ b/0xFF About/00 Changelog/index.html
@@ -32,7 +32,9 @@
       var is_top_frame = false;
         
         var pageToc = [
-          {title: "Version 0.1.1", url: "#_top", children: [
+          {title: "Version 0.1.2", url: "#_top", children: [
+          ]},
+          {title: "Version 0.1.1", url: "#version-011", children: [
           ]},
           {title: "Version 0.1.0", url: "#version-010", children: [
           ]},
@@ -85,7 +87,18 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 
     
 
-    <h1 id="version-011">Version 0.1.1</h1>
+    <h1 id="version-012">Version 0.1.2</h1>
+<ul>
+<li>Expanded "In the Beginning" section.<ul>
+<li>Added "Wabbit" and "Animal."</li>
+</ul>
+</li>
+<li>Cited Wikipedia in the Introduction.<ul>
+<li>Included link for reporting issues.</li>
+</ul>
+</li>
+</ul>
+<h1 id="version-011">Version 0.1.1</h1>
 <ul>
 <li>Fixed Bugs.<ul>
 <li>Incorrect version number in page header.</li>
