--- a/0x00 History/00 Sipping from the Fire Hose/index.html
+++ b/0x00 History/00 Sipping from the Fire Hose/index.html
@@ -89,7 +89,8 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <p>How did we get here? Where did all this malware come from, and why was it created? What fresh malware does the future have in store, and is there anything we can do to stop it?</p>
 <p>In pursuit of answers, we should consider not only today's headlines, but the history of malware as a whole—much of which is deeply rooted within a greater geopolitical context.</p>
 <p>The following sections aim to provide an overview of malware history, from its origins to the present day. The full timeline of malware history is beyond the scope of this website, so we must distill it, curating the most interesting and useful elements for our purpose. We hope you enjoy our selection.</p>
-<p>Without further ado, let us begin at the beginning.</p>
+<p>Also, much of this information is gathered from <a href="https://en.wikipedia.org/wiki/Timeline_of_computer_viruses_and_worms">Wikipedia</a>, which will make many college professors cringe. To those professors, I say: <a href="https://github.com/scriptsharks/scriptsharks.github.io/issues">submit an issue on GitHub</a> if you find a mistake in this content, and if you're feeling <em>really</em> generous, correct the mistake on Wikipedia. (Just be sure to cite a credible source.)</p>
+<p>Without further ado, let us begin.</p>
 
   <br>
     
