--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <div class="wm-top-title">
         ScriptSharks<br>
         
-          <span class="wm-top-version">0.1.1</span>
+          <span class="wm-top-version">0.1.2</span>
         
       </div>
     </a>
@@ -178,6 +178,8 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <p>ScriptSharks aims to document modern malware design and analysis techniques in the hopes that this information will help defenders to understand and prevent malware attacks in the future. It is currently the work of a single author; as such, it will grow and expand along with the author's own knowledge and skill.</p>
 <hr />
 <h2 id="news">News</h2>
+<h3 id="20220505">2022.05.05</h3>
+<p>We've established the <a href="/0x00 History/00 Sipping from the Fire Hose/">Malware History</a> section, starting with history's earliest malware. Stay tuned for more!</p>
 <h3 id="20220430">2022.04.30</h3>
 <p>Today marks the rebirth of ScriptSharks.com! Like a phoenix rising from ashes, except wet, and huge, and with so many teeth...</p>
 <hr />
@@ -221,5 +223,5 @@ Edit on GitHub</a>
 </html>
 <!--
 MkDocs version : 1.3.0
-Build Date UTC : 2022-05-03 19:10:46.866573+00:00
+Build Date UTC : 2022-05-05 20:36:08.197435+00:00
 -->
