--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <div class="wm-top-title">
         ScriptSharks<br>
         
-          <span class="wm-top-version">0.1.2</span>
+          <span class="wm-top-version">0.1.3</span>
         
       </div>
     </a>
@@ -117,6 +117,8 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <li class="wm-toc-li wm-toc-lev2 "><a href="0x00%20History/00%20Sipping%20from%20the%20Fire%20Hose/" class="wm-article-link wm-toc-text">Introduction</a>
 </li>
       <li class="wm-toc-li wm-toc-lev2 "><a href="0x00%20History/01%20In%20the%20Beginning/" class="wm-article-link wm-toc-text">In the Beginning...</a>
+</li>
+      <li class="wm-toc-li wm-toc-lev2 "><a href="0x00%20History/02%20Malware%20Explosion/" class="wm-article-link wm-toc-text">Malware Explosion</a>
 </li>
   </ul>
 </li>
@@ -175,9 +177,11 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <blockquote>
 <p>"If you know the enemy and know yourself, you need not fear the result of a hundred battles." ~Sun Tzu, <em>The Art of War</em></p>
 </blockquote>
-<p>ScriptSharks aims to document modern malware design and analysis techniques in the hopes that this information will help defenders to understand and prevent malware attacks in the future. It is currently the work of a single author; as such, it will grow and expand along with the author's own knowledge and skill.</p>
+<p>ScriptSharks aims to document the art and history of malware design and analysis, in the hopes that this information will help defenders to understand and prevent malware attacks in the future. It is currently the work of a single author; as such, it will grow and expand along with the author's own knowledge and skill.</p>
 <hr />
 <h2 id="news">News</h2>
+<h3 id="20220511">2022.05.11</h3>
+<p>After exploring malware's <a href="/0x00 History/01 In The Beginning/">early days</a>, witness the <a href="/0x00 History/02 Malware Explosion/">malware explosion</a> of the 80s in the latest Malware History section!</p>
 <h3 id="20220505">2022.05.05</h3>
 <p>We've established the <a href="/0x00 History/00 Sipping from the Fire Hose/">Malware History</a> section, starting with history's earliest malware. Stay tuned for more!</p>
 <h3 id="20220430">2022.04.30</h3>
@@ -223,5 +227,5 @@ Edit on GitHub</a>
 </html>
 <!--
 MkDocs version : 1.3.0
-Build Date UTC : 2022-05-05 20:36:08.197435+00:00
+Build Date UTC : 2022-05-11 20:20:52.933856+00:00
 -->
