--- a/0xFF About/01 License/index.html
+++ b/0xFF About/01 License/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <meta name="author" content="Christopher M. Steffen">
+    <meta name="author" content="Kristen M. Steffen">
     <link rel="canonical" href="https://www.scriptsharks.com/0xFF%20About/01%20License/">
     <link rel="shortcut icon" href="../../img/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
@@ -99,8 +99,8 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <p>
         <a href="https://github.com/scriptsharks/scriptsharks.source/edit/master/docs/0xFF About/01 License.md"><i class="fa fa-github"></i>
 Edit on GitHub</a>
-      </p><p>Copyright &copy; 2022 Christopher M. Steffen.<br>This work is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
-  <p>Documentation built with <a href="http://www.mkdocs.org/">MkDocs</a> using <a href="https://github.com/scriptsharks/scriptsharks.source">Windmill Dark</a> theme by Christopher M. Steffen (noraj).</p>
+      </p><p>Copyright &copy; 2022 Kristen M. Steffen.<br>This work is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
+  <p>Documentation built with <a href="http://www.mkdocs.org/">MkDocs</a> using <a href="https://github.com/noraj/mkdocs-windmill-dark">Windmill Dark</a> theme by Alexandre ZANNI (noraj).</p>
 </footer>
 
 </body>
