--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Exploring the world of dangerous code.">
-    <meta name="author" content="Christopher M. Steffen">
+    <meta name="author" content="Kristen M. Steffen">
     <link rel="canonical" href="https://www.scriptsharks.com/">
     <link rel="shortcut icon" href="./img/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
@@ -87,7 +87,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <div class="wm-top-title">
         ScriptSharks<br>
         
-          <span class="wm-top-version">0.1.3</span>
+          <span class="wm-top-version">0.1.4</span>
         
       </div>
     </a>
@@ -119,6 +119,8 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <li class="wm-toc-li wm-toc-lev2 "><a href="0x00%20History/01%20In%20the%20Beginning/" class="wm-article-link wm-toc-text">In the Beginning...</a>
 </li>
       <li class="wm-toc-li wm-toc-lev2 "><a href="0x00%20History/02%20Malware%20Explosion/" class="wm-article-link wm-toc-text">Malware Explosion</a>
+</li>
+      <li class="wm-toc-li wm-toc-lev2 "><a href="0x00%20History/03%20The%2090s/" class="wm-article-link wm-toc-text">The 90s</a>
 </li>
   </ul>
 </li>
@@ -180,6 +182,8 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <p>ScriptSharks aims to document the art and history of malware design and analysis, in the hopes that this information will help defenders to understand and prevent malware attacks in the future. It is currently the work of a single author; as such, it will grow and expand along with the author's own knowledge and skill.</p>
 <hr />
 <h2 id="news">News</h2>
+<h3 id="20220809">2022.08.09</h3>
+<p>The Malware History project continues with our exploration of <a href="/0x00 History/03 The 90s.md">the 90s</a> and the escalation of the digital arms race!</p>
 <h3 id="20220511">2022.05.11</h3>
 <p>After exploring malware's <a href="/0x00 History/01 In The Beginning/">early days</a>, witness the <a href="/0x00 History/02 Malware Explosion/">malware explosion</a> of the 80s in the latest Malware History section!</p>
 <h3 id="20220505">2022.05.05</h3>
@@ -219,13 +223,13 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <p>
         <a href="https://github.com/scriptsharks/scriptsharks.source/edit/master/docs/index.md"><i class="fa fa-github"></i>
 Edit on GitHub</a>
-      </p><p>Copyright &copy; 2022 Christopher M. Steffen.<br>This work is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
-  <p>Documentation built with <a href="http://www.mkdocs.org/">MkDocs</a> using <a href="https://github.com/scriptsharks/scriptsharks.source">Windmill Dark</a> theme by Christopher M. Steffen (noraj).</p>
+      </p><p>Copyright &copy; 2022 Kristen M. Steffen.<br>This work is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
+  <p>Documentation built with <a href="http://www.mkdocs.org/">MkDocs</a> using <a href="https://github.com/noraj/mkdocs-windmill-dark">Windmill Dark</a> theme by Alexandre ZANNI (noraj).</p>
 </footer>
 
 </body>
 </html>
 <!--
 MkDocs version : 1.3.0
-Build Date UTC : 2022-05-11 20:20:52.933856+00:00
+Build Date UTC : 2022-08-09 23:05:16.330212+00:00
 -->
