--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <hr />
 <h2 id="news">News</h2>
 <h3 id="20220809">2022.08.09</h3>
-<p>The Malware History project continues with our exploration of <a href="/0x00 History/03 The 90s.md">the 90s</a> and the escalation of the digital arms race!</p>
+<p>The Malware History project continues with our exploration of <a href="/0x00 History/03 The 90s/">the 90s</a> and the escalation of the digital arms race!</p>
 <h3 id="20220511">2022.05.11</h3>
 <p>After exploring malware's <a href="/0x00 History/01 In The Beginning/">early days</a>, witness the <a href="/0x00 History/02 Malware Explosion/">malware explosion</a> of the 80s in the latest Malware History section!</p>
 <h3 id="20220505">2022.05.05</h3>
@@ -231,5 +231,5 @@ Edit on GitHub</a>
 </html>
 <!--
 MkDocs version : 1.3.0
-Build Date UTC : 2022-08-09 23:05:16.330212+00:00
+Build Date UTC : 2022-08-09 23:18:29.579298+00:00
 -->
