--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <div class="wm-top-title">
         ScriptSharks<br>
         
-          <span class="wm-top-version">0.1.4</span>
+          <span class="wm-top-version">0.2.0</span>
         
       </div>
     </a>
@@ -129,9 +129,11 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 </li>
 <li class="wm-toc-li-nested collapse">
   <ul class="wm-toctree">
-      <li class="wm-toc-li wm-toc-lev2 "><a href="0xFF%20About/00%20Changelog/" class="wm-article-link wm-toc-text">Changelog</a>
+      <li class="wm-toc-li wm-toc-lev2 "><a href="0xFF%20About/FD%20Origins/" class="wm-article-link wm-toc-text">ScriptSharks Origins</a>
 </li>
-      <li class="wm-toc-li wm-toc-lev2 "><a href="0xFF%20About/01%20License/" class="wm-article-link wm-toc-text">License</a>
+      <li class="wm-toc-li wm-toc-lev2 "><a href="0xFF%20About/FE%20Changelog/" class="wm-article-link wm-toc-text">Changelog</a>
+</li>
+      <li class="wm-toc-li wm-toc-lev2 "><a href="0xFF%20About/FF%20License/" class="wm-article-link wm-toc-text">License</a>
 </li>
   </ul>
 </li>
@@ -182,6 +184,8 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <p>ScriptSharks aims to document the art and history of malware design and analysis, in the hopes that this information will help defenders to understand and prevent malware attacks in the future. It is currently the work of a single author; as such, it will grow and expand along with the author's own knowledge and skill.</p>
 <hr />
 <h2 id="news">News</h2>
+<h3 id="20220823">2022.08.23</h3>
+<p>After considerable reader feedback, I've finally added the <a href="/0xFF About/FD Origins/">ScriptSharks.com Origin Story</a>. Check it out to learn about the site's history!</p>
 <h3 id="20220809">2022.08.09</h3>
 <p>The Malware History project continues with our exploration of <a href="/0x00 History/03 The 90s/">the 90s</a> and the escalation of the digital arms race!</p>
 <h3 id="20220511">2022.05.11</h3>
@@ -231,5 +235,5 @@ Edit on GitHub</a>
 </html>
 <!--
 MkDocs version : 1.3.0
-Build Date UTC : 2022-08-10 18:52:20.449456+00:00
+Build Date UTC : 2022-08-24 16:26:06.585330+00:00
 -->
