Added "Millenial Malware" section.

--- a/0xFF About/FE Changelog/index.html
+++ b/0xFF About/FE Changelog/index.html
@@ -32,15 +32,15 @@
       var is_top_frame = false;
         
         var pageToc = [
-          {title: "Version 0.2.0", url: "#_top", children: [
+          {title: "Version 0.2.1", url: "#_top", children: [
+          ]},
+          {title: "Version 0.2.0", url: "#version-020", children: [
           ]},
           {title: "Version 0.1.4", url: "#version-014", children: [
           ]},
           {title: "Version 0.1.3", url: "#version-013", children: [
           ]},
           {title: "Version 0.1.2", url: "#version-012", children: [
-          ]},
-          {title: "Version 0.1.1", url: "#version-011", children: [
           ]},
           {title: "Older Versions", url: "#older-versions", children: [
           ]},
@@ -91,7 +91,14 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 
     
 
-    <h1 id="version-020">Version 0.2.0</h1>
+    <h1 id="version-021">Version 0.2.1</h1>
+<ul>
+<li>Added "Millenial Malware" section.<ul>
+<li>This covers the 00s.</li>
+</ul>
+</li>
+</ul>
+<h1 id="version-020">Version 0.2.0</h1>
 <ul>
 <li>Added "ScriptSharks Origins" article to the "About" section.</li>
 <li>Updated project organization.</li>
@@ -122,18 +129,14 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 </ul>
 </li>
 </ul>
-<h1 id="version-011">Version 0.1.1</h1>
-<ul>
-<li>Fixed bugs.<ul>
-<li>Incorrect version number in page header.</li>
-<li>Broken bullet hierarchy in Changelog.</li>
-</ul>
-</li>
-<li>Updated changelog organization.</li>
-</ul>
 <h1 id="older-versions">Older Versions</h1>
 <ul>
 <li>0.1.*<ul>
+<li>0.1.1<ul>
+<li>Fixed bugs.</li>
+<li>Updated changelog organization.</li>
+</ul>
+</li>
 <li>0.1.0<ul>
 <li>Created history section.</li>
 <li>Updated project organization.</li>
