Added Ransomware Rising section to history.

--- a/0xFF About/FE Changelog/index.html
+++ b/0xFF About/FE Changelog/index.html
@@ -32,15 +32,15 @@
       var is_top_frame = false;
         
         var pageToc = [
-          {title: "Version 0.2.1", url: "#_top", children: [
+          {title: "Version 0.2.2", url: "#_top", children: [
+          ]},
+          {title: "Version 0.2.1", url: "#version-021", children: [
           ]},
           {title: "Version 0.2.0", url: "#version-020", children: [
           ]},
           {title: "Version 0.1.4", url: "#version-014", children: [
           ]},
           {title: "Version 0.1.3", url: "#version-013", children: [
-          ]},
-          {title: "Version 0.1.2", url: "#version-012", children: [
           ]},
           {title: "Older Versions", url: "#older-versions", children: [
           ]},
@@ -91,7 +91,14 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 
     
 
-    <h1 id="version-021">Version 0.2.1</h1>
+    <h1 id="version-022">Version 0.2.2</h1>
+<ul>
+<li>Added "Ransomware Rising" section.<ul>
+<li>This covers the 10s.</li>
+</ul>
+</li>
+</ul>
+<h1 id="version-021">Version 0.2.1</h1>
 <ul>
 <li>Added "Millenial Malware" section.<ul>
 <li>This covers the 00s.</li>
@@ -118,20 +125,14 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 </ul>
 </li>
 </ul>
-<h1 id="version-012">Version 0.1.2</h1>
-<ul>
-<li>Expanded "In the Beginning" section.<ul>
-<li>Added "Wabbit" and "Animal."</li>
-</ul>
-</li>
-<li>Cited Wikipedia in the Introduction.<ul>
-<li>Included link for reporting issues.</li>
-</ul>
-</li>
-</ul>
 <h1 id="older-versions">Older Versions</h1>
 <ul>
 <li>0.1.*<ul>
+<li>0.1.2<ul>
+<li>Expanded "In the Beginning" section.</li>
+<li>Cited Wikipedia in the Introduction.</li>
+</ul>
+</li>
 <li>0.1.1<ul>
 <li>Fixed bugs.</li>
 <li>Updated changelog organization.</li>
