--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <div class="wm-top-title">
         ScriptSharks<br>
         
-          <span class="wm-top-version">0.2.1</span>
+          <span class="wm-top-version">0.2.2</span>
         
       </div>
     </a>
@@ -125,6 +125,8 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <li class="wm-toc-li wm-toc-lev2 "><a href="0x00%20History/03%20The%2090s/" class="wm-article-link wm-toc-text">Polymorphs, Macros and RATs! (Oh My!)</a>
 </li>
       <li class="wm-toc-li wm-toc-lev2 "><a href="0x00%20History/04%20Millenial%20Malware/" class="wm-article-link wm-toc-text">Millenial Malware</a>
+</li>
+      <li class="wm-toc-li wm-toc-lev2 "><a href="0x00%20History/05%20Ransomware%20Rising/" class="wm-article-link wm-toc-text">Ransomware Rising</a>
 </li>
   </ul>
 </li>
@@ -188,6 +190,8 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <p>ScriptSharks aims to document the art and history of malware design and analysis, in the hopes that this information will help defenders to understand and prevent malware attacks in the future. It is currently the work of a single author; as such, it will grow and expand along with the author's own knowledge and skill.</p>
 <hr />
 <h2 id="news">News</h2>
+<h3 id="20220915">2022.09.15</h3>
+<p>Check out the new <a href="/0x00 History/05 Ransomware Rising/">Ransomware Rising</a> article in the history section, detailing malware trends in the 2010s!</p>
 <h3 id="20220824">2022.08.24</h3>
 <p>I added <a href="/0x00 History/04 Millenial Malware/">Millenial Malware</a> to the history section. Spoiler: It's just so many worms, all over the place...</p>
 <h3 id="20220823">2022.08.23</h3>
@@ -196,8 +200,6 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <p>The Malware History project continues with our exploration of <a href="/0x00 History/03 The 90s/">the 90s</a> and the escalation of the digital arms race!</p>
 <h3 id="20220511">2022.05.11</h3>
 <p>After exploring malware's <a href="/0x00 History/01 In The Beginning/">early days</a>, witness the <a href="/0x00 History/02 Malware Explosion/">malware explosion</a> of the 80s in the latest Malware History section!</p>
-<h3 id="20220505">2022.05.05</h3>
-<p>We've established the <a href="/0x00 History/00 Sipping from the Fire Hose/">Malware History</a> section, starting with history's earliest malware. Stay tuned for more!</p>
 <h4 id="archives">Archives</h4>
 <p>Visit the <a href="/old news/">old news</a> page for older updates.</p>
 <hr />
@@ -241,5 +243,5 @@ Edit on GitHub</a>
 </html>
 <!--
 MkDocs version : 1.3.0
-Build Date UTC : 2022-08-24 21:51:45.604478+00:00
+Build Date UTC : 2022-09-15 19:17:09.109666+00:00
 -->
