--- a/old news/index.html
+++ b/old news/index.html
@@ -32,7 +32,9 @@
       var is_top_frame = false;
         
         var pageToc = [
-          {title: "2022.04.30", url: "#_top", children: [
+          {title: "2022.05.05", url: "#_top", children: [
+          ]},
+          {title: "2022.04.30", url: "#20220430", children: [
           ]},
         ];
 
@@ -83,6 +85,8 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 
     <h1>Old News</h1>
 
+<h3 id="20220505">2022.05.05</h3>
+<p>We've established the <a href="/0x00 History/00 Sipping from the Fire Hose/">Malware History</a> section, starting with history's earliest malware. Stay tuned for more!</p>
 <h3 id="20220430">2022.04.30</h3>
 <p>Today marks the rebirth of ScriptSharks.com! Like a phoenix rising from ashes, except wet, and huge, and with so many teeth...</p>
 
