Added design and analysis sections, as well as a section for external resources.

--- a/0xFF About/FE Changelog/index.html
+++ b/0xFF About/FE Changelog/index.html
@@ -32,7 +32,9 @@
       var is_top_frame = false;
         
         var pageToc = [
-          {title: "Version 0.2.2", url: "#_top", children: [
+          {title: "Version 0.2.3", url: "#_top", children: [
+          ]},
+          {title: "Version 0.2.2", url: "#version-022", children: [
           ]},
           {title: "Version 0.2.1", url: "#version-021", children: [
           ]},
@@ -91,7 +93,14 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 
     
 
-    <h1 id="version-022">Version 0.2.2</h1>
+    <h1 id="version-023">Version 0.2.3</h1>
+<ul>
+<li>Added the Design, Analysis and Resources sections.<ul>
+<li>Includes information about hypervisors and basic toolsets.</li>
+</ul>
+</li>
+</ul>
+<h1 id="version-022">Version 0.2.2</h1>
 <ul>
 <li>Added "Ransomware Rising" section.<ul>
 <li>This covers the 10s.</li>
