--- a/0x20 Analysis/File Forensics/Emails/index.html
+++ b/0x20 Analysis/File Forensics/Emails/index.html
@@ -64,11 +64,11 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
   <div class="row wm-article-nav-buttons" role="navigation" aria-label="navigation">
     
     <div class="wm-article-nav pull-right">
-      <a href="../../../0x30%20Resources/Software/Virtual%20Machines/00%20Background/" class="btn btn-xs btn-default pull-right">
+      <a href="../../../0x30%20Tools%20of%20the%20Trade/Virtual%20Machines/00%20Background/" class="btn btn-xs btn-default pull-right">
         Next
         <i class="fa fa-chevron-right" aria-hidden="true"></i>
       </a>
-      <a href="../../../0x30%20Resources/Software/Virtual%20Machines/00%20Background/" class="btn btn-xs btn-link">
+      <a href="../../../0x30%20Tools%20of%20the%20Trade/Virtual%20Machines/00%20Background/" class="btn btn-xs btn-link">
         A Little VM History
       </a>
     </div>
@@ -184,11 +184,11 @@ text/html
   <div class="row wm-article-nav-buttons" role="navigation" aria-label="navigation">
     
     <div class="wm-article-nav pull-right">
-      <a href="../../../0x30%20Resources/Software/Virtual%20Machines/00%20Background/" class="btn btn-xs btn-default pull-right">
+      <a href="../../../0x30%20Tools%20of%20the%20Trade/Virtual%20Machines/00%20Background/" class="btn btn-xs btn-default pull-right">
         Next
         <i class="fa fa-chevron-right" aria-hidden="true"></i>
       </a>
-      <a href="../../../0x30%20Resources/Software/Virtual%20Machines/00%20Background/" class="btn btn-xs btn-link">
+      <a href="../../../0x30%20Tools%20of%20the%20Trade/Virtual%20Machines/00%20Background/" class="btn btn-xs btn-link">
         A Little VM History
       </a>
     </div>
