--- a/0xFF About/FE Changelog/index.html
+++ b/0xFF About/FE Changelog/index.html
@@ -32,7 +32,9 @@
       var is_top_frame = false;
         
         var pageToc = [
-          {title: "Version 0.2.3", url: "#_top", children: [
+          {title: "Version 0.3.0", url: "#_top", children: [
+          ]},
+          {title: "Version 0.2.3", url: "#version-023", children: [
           ]},
           {title: "Version 0.2.2", url: "#version-022", children: [
           ]},
@@ -93,7 +95,16 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 
     
 
-    <h1 id="version-023">Version 0.2.3</h1>
+    <h1 id="version-030">Version 0.3.0</h1>
+<ul>
+<li>Added information for HTML, ISO and LNK droppers.<ul>
+<li>Historical overview.</li>
+<li>Design walk-through.</li>
+</ul>
+</li>
+<li>Restructured the page a bit.</li>
+</ul>
+<h1 id="version-023">Version 0.2.3</h1>
 <ul>
 <li>Added the Design, Analysis and Resources sections.<ul>
 <li>Includes information about hypervisors and basic toolsets.</li>
