--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <div class="wm-top-title">
         ScriptSharks<br>
         
-          <span class="wm-top-version">0.2.3</span>
+          <span class="wm-top-version">0.3.0</span>
         
       </div>
     </a>
@@ -133,10 +133,36 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 </li>
 <li class="wm-toc-li-nested collapse">
   <ul class="wm-toctree">
-      <li class="wm-toc-li wm-toc-lev2 "><a href="0x10%20Design/00%20Introduction/" class="wm-article-link wm-toc-text">Let's Write Some Malware!</a>
+      <li class="wm-toc-li wm-toc-lev2 "><a href="0x10%20Design/10%20Introduction/" class="wm-article-link wm-toc-text">10 Let's Write Some Malware!</a>
 </li>
-      <li class="wm-toc-li wm-toc-lev2 "><a href="0x10%20Design/01%20Overview/" class="wm-article-link wm-toc-text">Malware Design Overview</a>
+      <li class="wm-toc-li wm-toc-lev2 "><a href="0x10%20Design/11%20Overview/" class="wm-article-link wm-toc-text">11 Malware Design Overview</a>
 </li>
+      <li class="wm-toc-li wm-toc-lev2 wm-toc-opener"><span class="wm-toc-text">12 Droppers</span>
+</li>
+<li class="wm-toc-li-nested collapse">
+  <ul class="wm-toctree">
+      <li class="wm-toc-li wm-toc-lev3 "><a href="0x10%20Design/12%20Droppers/00%20Intro/" class="wm-article-link wm-toc-text">Dropper Basics</a>
+</li>
+      <li class="wm-toc-li wm-toc-lev3 "><a href="0x10%20Design/12%20Droppers/10%20Design/" class="wm-article-link wm-toc-text">Step 0: Designing a Dropper</a>
+</li>
+      <li class="wm-toc-li wm-toc-lev3 "><a href="0x10%20Design/12%20Droppers/20%20LNK/" class="wm-article-link wm-toc-text">Step 1: Stager and LNK</a>
+</li>
+      <li class="wm-toc-li wm-toc-lev3 "><a href="0x10%20Design/12%20Droppers/30%20ISO/" class="wm-article-link wm-toc-text">Step 2: Build the ISO</a>
+</li>
+      <li class="wm-toc-li wm-toc-lev3 "><a href="0x10%20Design/12%20Droppers/40%20HTML/" class="wm-article-link wm-toc-text">Step 3: Assemble the HTML</a>
+</li>
+  </ul>
+</li>
+
+      <li class="wm-toc-li wm-toc-lev2 wm-toc-opener"><span class="wm-toc-text">13 Stagers</span>
+</li>
+<li class="wm-toc-li-nested collapse">
+  <ul class="wm-toctree">
+      <li class="wm-toc-li wm-toc-lev3 "><a href="0x10%20Design/13%20Stagers/00%20Intro/" class="wm-article-link wm-toc-text">Stager Basics</a>
+</li>
+  </ul>
+</li>
+
   </ul>
 </li>
 
@@ -158,27 +184,20 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
   </ul>
 </li>
 
-        <li class="wm-toc-li wm-toc-lev1 wm-toc-opener"><span class="wm-toc-text">0x30 Resources</span>
+        <li class="wm-toc-li wm-toc-lev1 wm-toc-opener"><span class="wm-toc-text">0x30 Tools of the Trade</span>
 </li>
 <li class="wm-toc-li-nested collapse">
   <ul class="wm-toctree">
-      <li class="wm-toc-li wm-toc-lev2 wm-toc-opener"><span class="wm-toc-text">Software</span>
+      <li class="wm-toc-li wm-toc-lev2 wm-toc-opener"><span class="wm-toc-text">Virtual Machines</span>
 </li>
 <li class="wm-toc-li-nested collapse">
   <ul class="wm-toctree">
-      <li class="wm-toc-li wm-toc-lev3 wm-toc-opener"><span class="wm-toc-text">Virtual Machines</span>
+      <li class="wm-toc-li wm-toc-lev3 "><a href="0x30%20Tools%20of%20the%20Trade/Virtual%20Machines/00%20Background/" class="wm-article-link wm-toc-text">A Little VM History</a>
 </li>
-<li class="wm-toc-li-nested collapse">
-  <ul class="wm-toctree">
-      <li class="wm-toc-li wm-toc-lev4 "><a href="0x30%20Resources/Software/Virtual%20Machines/00%20Background/" class="wm-article-link wm-toc-text">A Little VM History</a>
+      <li class="wm-toc-li wm-toc-lev3 "><a href="0x30%20Tools%20of%20the%20Trade/Virtual%20Machines/01%20Hypervisors/" class="wm-article-link wm-toc-text">Hypervisors 101</a>
 </li>
-      <li class="wm-toc-li wm-toc-lev4 "><a href="0x30%20Resources/Software/Virtual%20Machines/01%20Hypervisors/" class="wm-article-link wm-toc-text">Hypervisors 101</a>
+      <li class="wm-toc-li wm-toc-lev3 "><a href="0x30%20Tools%20of%20the%20Trade/Virtual%20Machines/02%20Guest%20OSes/" class="wm-article-link wm-toc-text">Guest OSes</a>
 </li>
-      <li class="wm-toc-li wm-toc-lev4 "><a href="0x30%20Resources/Software/Virtual%20Machines/02%20Guest%20OSes/" class="wm-article-link wm-toc-text">Guest OSes</a>
-</li>
-  </ul>
-</li>
-
   </ul>
 </li>
 
@@ -243,16 +262,16 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <p>ScriptSharks aims to document the art and history of malware design and analysis, in the hopes that this information will help defenders to understand and prevent malware attacks in the future. It is currently the work of a single author; as such, it will grow and expand along with the author's own knowledge and skill.</p>
 <hr />
 <h2 id="news">News</h2>
+<h3 id="20221212">2022.12.12</h3>
+<p>Learn about a currently-trending dropper design by <a href="/0x10%20Design/12%20Droppers/00%20Intro/">building it yourself</a>!</p>
 <h3 id="20221024">2022.10.24</h3>
-<p>I've added the Design, Analysis and Resources sections. Check them out!</p>
+<p>We've added the Design, Analysis and Tools sections. Check them out!</p>
 <h3 id="20220915">2022.09.15</h3>
 <p>Check out the new <a href="/0x00 History/05 Ransomware Rising/">Ransomware Rising</a> article in the history section, detailing malware trends in the 2010s!</p>
 <h3 id="20220824">2022.08.24</h3>
-<p>I added <a href="/0x00 History/04 Millenial Malware/">Millenial Malware</a> to the history section. Spoiler: It's just so many worms, all over the place...</p>
+<p>We added <a href="/0x00 History/04 Millenial Malware/">Millenial Malware</a> to the history section. Spoiler: It's just so many worms, all over the place...</p>
 <h3 id="20220823">2022.08.23</h3>
-<p>After considerable reader feedback, I've finally added the <a href="/0xFF About/FD Origins/">ScriptSharks.com Origin Story</a>. Check it out to learn about the site's history!</p>
-<h3 id="20220809">2022.08.09</h3>
-<p>The Malware History project continues with our exploration of <a href="/0x00 History/03 The 90s/">the 90s</a> and the escalation of the digital arms race!</p>
+<p>After considerable reader feedback, We've finally added the <a href="/0xFF About/FD Origins/">ScriptSharks.com Origin Story</a>. Check it out to learn about the site's history!</p>
 <h4 id="archives">Archives</h4>
 <p>Visit the <a href="/0xFF About/FC Old News/">old news</a> page for older updates.</p>
 <hr />
@@ -295,6 +314,6 @@ Edit on GitHub</a>
 </body>
 </html>
 <!--
-MkDocs version : 1.3.0
-Build Date UTC : 2022-10-25 03:11:16.709855+00:00
+MkDocs version : 1.4.2
+Build Date UTC : 2022-12-12 21:21:30.576284+00:00
 -->
