--- a/0xF0 About/FD Origins/index.html
+++ b/0xF0 About/FD Origins/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <meta name="author" content="Kristen M. Steffen">
-    <link rel="canonical" href="https://www.scriptsharks.com/0xFF%20About/FD%20Origins/">
+    <link rel="canonical" href="https://www.scriptsharks.com/0xF0%20About/FD%20Origins/">
     <link rel="shortcut icon" href="../../img/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <title>ScriptSharks Origins - ScriptSharks</title>
@@ -326,7 +326,7 @@ drwxr-xr-x 2 root    root 4.0K Apr 19 05:02 scriptsharks.com
 
 <footer class="col-md-12 wm-page-content">
       <p>
-        <a href="https://github.com/scriptsharks/scriptsharks.source/edit/master/docs/0xFF About/FD Origins.md"><i class="fa fa-github"></i>
+        <a href="https://github.com/scriptsharks/scriptsharks.source/edit/master/docs/0xF0 About/FD Origins.md"><i class="fa fa-github"></i>
 Edit on GitHub</a>
       </p><p>Copyright &copy; 2022 Kristen M. Steffen.<br>This work is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
   <p>Documentation built with <a href="http://www.mkdocs.org/">MkDocs</a> using <a href="https://github.com/noraj/mkdocs-windmill-dark">Windmill Dark</a> theme by Alexandre ZANNI (noraj).</p>
