--- a/0x00 History/00 Sipping from the Fire Hose/index.html
+++ b/0x00 History/00 Sipping from the Fire Hose/index.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="https://www.scriptsharks.com/0x00%20History/00%20Sipping%20from%20the%20Fire%20Hose/">
     <link rel="shortcut icon" href="../../img/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>Introduction - ScriptSharks</title>
+    <title>00 Introduction - ScriptSharks</title>
     <link href="../../css/bootstrap-3.3.7.min.css" rel="stylesheet">
     <link href="../../css/font-awesome-4.7.0.css" rel="stylesheet">
     <link href="../../css/base.css" rel="stylesheet">
@@ -65,7 +65,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
         <i class="fa fa-chevron-right" aria-hidden="true"></i>
       </a>
       <a href="../01%20In%20the%20Beginning/" class="btn btn-xs btn-link">
-        In the Beginning...
+        01 In the Beginning...
       </a>
     </div>
     
@@ -108,7 +108,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
         <i class="fa fa-chevron-right" aria-hidden="true"></i>
       </a>
       <a href="../01%20In%20the%20Beginning/" class="btn btn-xs btn-link">
-        In the Beginning...
+        01 In the Beginning...
       </a>
     </div>
     
