--- a/0x00 History/05 Ransomware Rising/index.html
+++ b/0x00 History/05 Ransomware Rising/index.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="https://www.scriptsharks.com/0x00%20History/05%20Ransomware%20Rising/">
     <link rel="shortcut icon" href="../../img/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>Ransomware Rising - ScriptSharks</title>
+    <title>05 Ransomware Rising - ScriptSharks</title>
     <link href="../../css/bootstrap-3.3.7.min.css" rel="stylesheet">
     <link href="../../css/font-awesome-4.7.0.css" rel="stylesheet">
     <link href="../../css/base.css" rel="stylesheet">
@@ -87,7 +87,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <a href="../04%20Millenial%20Malware/" class="btn btn-xs btn-default pull-left">
         <i class="fa fa-chevron-left" aria-hidden="true"></i>
         Previous</a><a href="../04%20Millenial%20Malware/" class="btn btn-xs btn-link">
-        Millenial Malware
+        04 Millenial Malware
       </a>
     </div>
     
@@ -265,7 +265,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <a href="../04%20Millenial%20Malware/" class="btn btn-xs btn-default pull-left">
         <i class="fa fa-chevron-left" aria-hidden="true"></i>
         Previous</a><a href="../04%20Millenial%20Malware/" class="btn btn-xs btn-link">
-        Millenial Malware
+        04 Millenial Malware
       </a>
     </div>
     
