--- a/0x30 Tools of the Trade/30 Virtual Machines/01 Hypervisors/index.html
+++ b/0x30 Tools of the Trade/30 Virtual Machines/01 Hypervisors/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <meta name="author" content="Kristen M. Steffen">
-    <link rel="canonical" href="https://www.scriptsharks.com/0x30%20Tools%20of%20the%20Trade/Virtual%20Machines/01%20Hypervisors/">
+    <link rel="canonical" href="https://www.scriptsharks.com/0x30%20Tools%20of%20the%20Trade/30%20Virtual%20Machines/01%20Hypervisors/">
     <link rel="shortcut icon" href="../../../img/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <title>Hypervisors 101 - ScriptSharks</title>
@@ -152,7 +152,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 
 <footer class="col-md-12 wm-page-content">
       <p>
-        <a href="https://github.com/scriptsharks/scriptsharks.source/edit/master/docs/0x30 Tools of the Trade/Virtual Machines/01 Hypervisors.md"><i class="fa fa-github"></i>
+        <a href="https://github.com/scriptsharks/scriptsharks.source/edit/master/docs/0x30 Tools of the Trade/30 Virtual Machines/01 Hypervisors.md"><i class="fa fa-github"></i>
 Edit on GitHub</a>
       </p><p>Copyright &copy; 2022 Kristen M. Steffen.<br>This work is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
   <p>Documentation built with <a href="http://www.mkdocs.org/">MkDocs</a> using <a href="https://github.com/noraj/mkdocs-windmill-dark">Windmill Dark</a> theme by Alexandre ZANNI (noraj).</p>
