--- a/0xF0 About/FE Changelog/index.html
+++ b/0xF0 About/FE Changelog/index.html
@@ -32,7 +32,9 @@
       var is_top_frame = false;
         
         var pageToc = [
-          {title: "Version 0.3.1", url: "#_top", children: [
+          {title: "Version 0.3.2", url: "#_top", children: [
+          ]},
+          {title: "Version 0.3.1", url: "#version-031", children: [
           ]},
           {title: "Version 0.3.0", url: "#version-030", children: [
           ]},
@@ -97,7 +99,18 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 
     
 
-    <h1 id="version-031">Version 0.3.1</h1>
+    <h1 id="version-032">Version 0.3.2</h1>
+<ul>
+<li>Added a note regarding attribution to the Analysis intro.</li>
+<li>Updated the Email File analysis section to fix some code issues.</li>
+<li>Added new content:<ul>
+<li>HTML and JavaScript analysis.</li>
+<li>ISO file analysis.</li>
+<li>Unix <code>file</code> utility.</li>
+</ul>
+</li>
+</ul>
+<h1 id="version-031">Version 0.3.1</h1>
 <ul>
 <li>Minor revision, enumerating pages.</li>
 </ul>
