--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <div class="wm-top-title">
         ScriptSharks<br>
         
-          <span class="wm-top-version">0.3.1</span>
+          <span class="wm-top-version">0.3.2</span>
         
       </div>
     </a>
@@ -178,6 +178,17 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
   <ul class="wm-toctree">
       <li class="wm-toc-li wm-toc-lev3 "><a href="0x20%20Analysis/21%20File%20Forensics/Emails/" class="wm-article-link wm-toc-text">Emails</a>
 </li>
+      <li class="wm-toc-li wm-toc-lev3 "><a href="0x20%20Analysis/21%20File%20Forensics/ISOs/" class="wm-article-link wm-toc-text">ISO Files</a>
+</li>
+  </ul>
+</li>
+
+      <li class="wm-toc-li wm-toc-lev2 wm-toc-opener"><span class="wm-toc-text">22 Language Tricks</span>
+</li>
+<li class="wm-toc-li-nested collapse">
+  <ul class="wm-toctree">
+      <li class="wm-toc-li wm-toc-lev3 "><a href="0x20%20Analysis/22%20Language%20Tricks/HTML%20and%20JS/" class="wm-article-link wm-toc-text">HTML and JavaScript</a>
+</li>
   </ul>
 </li>
 
@@ -197,6 +208,15 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <li class="wm-toc-li wm-toc-lev3 "><a href="0x30%20Tools%20of%20the%20Trade/30%20Virtual%20Machines/01%20Hypervisors/" class="wm-article-link wm-toc-text">Hypervisors 101</a>
 </li>
       <li class="wm-toc-li wm-toc-lev3 "><a href="0x30%20Tools%20of%20the%20Trade/30%20Virtual%20Machines/02%20Guest%20OSes/" class="wm-article-link wm-toc-text">Guest OSes</a>
+</li>
+  </ul>
+</li>
+
+      <li class="wm-toc-li wm-toc-lev2 wm-toc-opener"><span class="wm-toc-text">31 File Manipulation</span>
+</li>
+<li class="wm-toc-li-nested collapse">
+  <ul class="wm-toctree">
+      <li class="wm-toc-li wm-toc-lev3 "><a href="0x30%20Tools%20of%20the%20Trade/31%20File%20Manipulation/Metadata/" class="wm-article-link wm-toc-text">Parsing File Metadata</a>
 </li>
   </ul>
 </li>
@@ -262,6 +282,8 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <p>ScriptSharks aims to document the art and history of malware design and analysis, in the hopes that this information will help defenders to understand and prevent malware attacks in the future. It is currently the work of a single author; as such, it will grow and expand along with the author's own knowledge and skill.</p>
 <hr />
 <h2 id="news">News</h2>
+<h3 id="20221219">2022.12.19</h3>
+<p>We've added new sections regarding <a href="/0x20%20Analysis/22%20Language%20Tricks/HTML%20and%20JS/">HTML and JavaScript</a> language tricks, <a href="/0x20%20Analysis/21%20File%20Forensics/ISOs/">analyzing ISO files</a>, and the <a href="/0x30%20Tools%20of%20the%20Trade/31%20File%20Manipulation/Metadata/">handy Unix <code>file</code> utility</a>.</p>
 <h3 id="20221212">2022.12.12</h3>
 <p>Learn about a currently-trending dropper design by <a href="/0x10%20Design/12%20Droppers/00%20Intro/">building it yourself</a>!</p>
 <h3 id="20221024">2022.10.24</h3>
@@ -270,8 +292,6 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <p>Check out the new <a href="/0x00 History/05 Ransomware Rising/">Ransomware Rising</a> article in the history section, detailing malware trends in the 2010s!</p>
 <h3 id="20220824">2022.08.24</h3>
 <p>We added <a href="/0x00 History/04 Millenial Malware/">Millenial Malware</a> to the history section. Spoiler: It's just so many worms, all over the place...</p>
-<h3 id="20220823">2022.08.23</h3>
-<p>After considerable reader feedback, We've finally added the <a href="/0xF0 About/FD Origins/">ScriptSharks.com Origin Story</a>. Check it out to learn about the site's history!</p>
 <h4 id="archives">Archives</h4>
 <p>Visit the <a href="/0xF0 About/FC Old News/">old news</a> page for older updates.</p>
 <hr />
@@ -315,5 +335,5 @@ Edit on GitHub</a>
 </html>
 <!--
 MkDocs version : 1.4.2
-Build Date UTC : 2022-12-12 21:56:22.162483+00:00
+Build Date UTC : 2022-12-19 22:20:28.883067+00:00
 -->
